--- a/5_位运算/位运算.md
+++ b/5_位运算/位运算.md
@@ -74,3 +74,86 @@ if __name__ == "__main__":
     a = Solution().findThePrefixCommonArray(A, B)
     print(a)
 ```
+
+## 通过这种方法，我们可以快速判断一个元素是否在集合中
+
+**leecode3115为例**
+
+给你一个整数数组 nums。返回两个（不一定不同的）质数在 nums 中 下标 的 最大距离。
+
+由于题目告诉了数组元素的范围：
+
+提示：
+- 1 <= nums.length <= 3 * 105
+- 1 <= nums[i] <= 100
+- 输入保证 nums 中至少有一个质数。
+
+所以，可以将1-100之间的质数，整理到一个集合
+
+方法1：
+```python
+class Solution:
+    def __init__(self):            
+        self.primes_list = [
+            2, 3, 5, 7, 11, 13, 17, 19, 23, 29,
+            31, 37, 41, 43, 47, 53, 59, 61, 67,
+            71, 73, 79, 83, 89, 97
+        ]
+
+    def maximumPrimeDifference(self, nums: List[int]) -> int:
+        left,right = 0,len(nums)-1
+        while nums[left] not in self.primes_list:
+            left += 1
+        while nums[right] not in self.primes_list:
+            right -= 1
+        return right - left
+if __name__ == "__main__":
+    print(Solution().maximumPrimeDifference([4,2,9,5,3]))
+```
+
+方法2：
+
+由于100以内的质数只有25个，我们可以将这个集合压缩成一个数
+
+```python
+
+    def __init__(self):            
+        self.primes_list = [
+            2, 3, 5, 7, 11, 13, 17, 19, 23, 29,
+            31, 37, 41, 43, 47, 53, 59, 61, 67,
+            71, 73, 79, 83, 89, 97
+        ]
+        self.PRIME_MASK = sum([2**i for i in self.primes_list])
+```
+
+根据位运算判断该元素是否在集合中，比如：上述代码中的PRIME_MASK的值为：`159085582874019712269820766380`
+
+计算的方式为： `2^2`+`2^3`+`2^5`+`2^11` +...+`2^97` 那么转化为2进制就是：第0位是0，第一位是0，**第二位是1，第三位是1**，第四位是0，**第五位是1**，....，**第97位是1**
+
+那么如果我们想判断 5 是否在这个集合中，只需要判断 PRIME_MASK 第五位上的二进制数是否为1就可以了， 如果为1， 那么5 就在集合中，反之，则不在集合中
+
+```python
+
+class Solution:
+    def __init__(self):            
+        self.primes_list = [
+            2, 3, 5, 7, 11, 13, 17, 19, 23, 29,
+            31, 37, 41, 43, 47, 53, 59, 61, 67,
+            71, 73, 79, 83, 89, 97
+        ]
+        self.PRIME_MASK = sum([2**i for i in self.primes_list])
+    
+    def maximumPrimeDifference(self, nums: List[int]) -> int:
+        left,right = 0,len(nums)-1
+        while self.PRIME_MASK >> nums[left] & 1 == 0:
+            left += 1
+        while self.PRIME_MASK >> nums[right] & 1 ==0:
+            right -= 1
+        return right - left
+if __name__ == "__main__":
+    print(Solution().maximumPrimeDifference([4,2,9,5,3]))
+```
+
+其中 self.PRIME_MASK >> nums[left] & 1 == 0 就说明nums[left]不在集合中
+
+因为 self.PRIME_MASK >> nums[left] 相当于将PRIME_MASK的二进制的第0，1，2，3，4位，全部去掉了(还是以判断5是否在集合中为例),那么再 & 1， 相当于就是判断 self.PRIME_MASK >> nums[left] 第0位是否为1（也就是判断原来的第五位是否是1)
